# tuttle

./: .flake8  .gitignore  AGENTS.md  AUTHORS.md  CONTRIBUTING.md  Makefile  README.md  app.py  justfile  pyproject.toml  tuttle-rpc.spec
.cursor/rules/: dialog-scroll-safety.mdc  python-env.mdc  python-imports.mdc  testing-workflow.mdc
.cursor/skills/readme-screenshots/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  release-body-template.md
.github/workflows/: core-smoke.yml  issue-assignee-check.yml  pack-app.yml  pack-electron.yml  pr-conflict-check.yml  pr-stale-check.yml  pr-template-check.yml  python-package.yml
TuttleMac/: Makefile  Package.resolved  Package.swift  README.md
TuttleMac/Sources/TuttleMac/: ContentView.swift  TuttleMacApp.swift
TuttleMac/Sources/TuttleMac/Models/: AppModels.swift
TuttleMac/Sources/TuttleMac/Python/: PythonBridge.swift
TuttleMac/Sources/TuttleMac/ViewModels/: BusinessViewModel.swift  DashboardViewModel.swift  InvoicingViewModel.swift  TimelineViewModel.swift
TuttleMac/Sources/TuttleMac/Views/: Sidebar.swift
design_docs/: README.md  mixed-currency.md
docs/: conf.py
scripts/: pack_app.py  pack_electron.py  release_downloads.py  smoke_core.py
templates/invoice/: invoice.html
templates/invoice-anvil/: invoice.css  invoice.html
templates/invoice-bold/: invoice.css  invoice.html
templates/invoice-classic/: invoice-pdf.css  invoice.css  invoice.html
templates/invoice-grayshades/: invoice.css  invoice.html
templates/invoice-minimal/: invoice-pdf.css  invoice.css  invoice.html
templates/invoice-modern/: invoice-pdf.css  invoice.css  invoice.html
templates/timesheet-anvil/: timesheet.css  timesheet.html
tuttle/: __init__.py  app_db.py  banking.py  bridge.py  calendar.py  data_dir.py  dataviz.py  db_schema.py  demo.py  dev.py  einvoice.py  eventkit_bridge.py  forecasting.py  fx.py  invoicing.py  kpi.py  llm.py  mail.py  model.py  os_functions.py  rendering.py  rpc_server.py  schema.py  tax.py  tax_reserves.py  time.py  timetracking.py
tuttle-electron/src/api/: entity.ts
tuttle-electron/src/components/invoicing/: InvoicingView.tsx
tuttle-electron/src/components/layout/: Shell.tsx
tuttle-electron/src/components/salary/: SalaryView.tsx
tuttle-electron/src/components/settings/: SettingsView.tsx
tuttle-electron/src/components/tax/: TaxReservesView.tsx
tuttle-electron/src/components/timeline/: TimelineView.tsx
tuttle/app/auth/: intent.py  view.py
tuttle/app/clients/: intent.py  view.py
tuttle/app/contacts/: intent.py  view.py
tuttle/app/contracts/: intent.py  view.py
tuttle/app/core/: abstractions.py  charts.py  client_storage_impl.py  database_storage_impl.py  dispatch.py  formatting.py  intent_result.py  rpc_utils.py  status_bar.py  utils.py  views.py
tuttle/app/custom_flet/: custom_mat_chart.py
tuttle/app/dashboard/: __init__.py  intent.py  view.py
tuttle/app/db/: intent.py
tuttle/app/demo/: intent.py
tuttle/app/error_views/: page_not_found_screen.py
tuttle/app/home/: view.py
tuttle/app/imports/: intent.py
tuttle/app/invoice_notes/: data_source.py  intent.py
tuttle/app/invoicing/: data_source.py  intent.py  view.py
tuttle/app/llm/: intent.py
tuttle/app/preferences/: intent.py  model.py  view.py
tuttle/app/projects/: intent.py  view.py
tuttle/app/res/: colors.py  dimens.py  fonts.py  image_paths.py  theme.py
tuttle/app/salary/: data_source.py  intent.py  view.py
tuttle/app/settings/: intent.py
tuttle/app/system/: intent.py  log_sink.py
tuttle/app/tasks/: generator.py  intent.py
tuttle/app/tax/: __init__.py  intent.py  view.py
tuttle/app/timeline/: intent.py  view.py
tuttle/app/timetracking/: aggregation.py  data_source.py  intent.py  view.py
tuttle/app/users/: intent.py
tuttle/migrations/: __init__.py  alembic.ini  env.py  run.py
tuttle/migrations/versions/: 16093a6ceba4_add_user_signature_field.py  2026_03_07_0001_baseline_schema.py  2026_03_12_0002_add_financialgoal.py  2026_03_13_0003_add_user_operating_country.py  2026_03_14_0004_add_recurringexpense.py  34dd17917a18_add_accent_color_to_user.py  4447db01f757_add_invoice_sent_date.py  574b8329a133_add_fixed_price_to_contract_make_rate_.py  5f919b074635_add_tax_category_to_contract_and_.py  82849a169a70_add_user_logo_column.py  8de1ce679065_add_type_discriminator_to_contract.py  8ec5efc5316d_add_task_table.py  a64c27722470_merge_import_invoice_and_remove_cloud_.py  b4129a32cae4_remove_obsolete_icloud_google_cloud_.py  c3d70beffa72_make_contact_first_name_and_last_name_.py  e10551639fd3_make_invoiceitem_start_date_optional.py  f8a4403a2ecd_make_project_end_date_optional_for_open_.py  fbfa8c0c36e4_add_clientcontact_many_to_many_.py
tuttle/tax_data/brazil/: 2024.json  2025.json  2026.json
tuttle/tax_data/estonia/: 2024.json  2025.json  2026.json
tuttle/tax_data/france/: 2024.json  2025.json  2026.json
tuttle/tax_data/germany/: 2024.json  2025.json  2026.json
tuttle/tax_data/spain/: 2024.json  2025.json  2026.json
tuttle/tax_data/sweden/: 2024.json  2025.json  2026.json
tuttle/tax_data/united_states/: 2024.json  2025.json  2026.json
tuttle_tests/: __init__.py  conftest.py  test_app_start.py  test_dashboard.py  test_data_dir.py  test_db_schema.py  test_demo.py  test_document_import.py  test_einvoice.py  test_fx.py  test_invoice.py  test_invoice_sent_timeline.py  test_migrations.py  test_model.py  test_rendering.py  test_rpc_dispatch.py  test_tasks.py  test_tax.py  test_timetracking.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/electron/: main.ts  preload.cjs  preload.ts  python-bridge.ts  updater.ts
ui/scripts/: capture-view.ts
ui/src/: App.tsx
ui/src/api/: entity.ts  rpc.ts  tax.ts  types.ts
ui/src/components/business/: ClientsView.tsx  ContractsView.tsx  ProjectsView.tsx
ui/src/components/contacts/: ContactsView.tsx
ui/src/components/dashboard/: DashboardView.tsx
ui/src/components/import/: ContractImportView.tsx  DocumentImportView.tsx
ui/src/hooks/: useFieldRequirements.ts  useRPC.ts  useTheme.ts
ui/src/styles/: globals.css
(+38 files in other folders)
